re PR c++/16717 ([unit-at-a-time] __attribute__((constructor)) broken in C++)

PR c++/16717
	* semantics.c (expand_body): Do not update static_ctors and
	static_dtors here.
	(expand_or_defer_fn): Do it here, instead.

	PR c++/16717
	* g++.dg/ext/construct1.C: New test.

From-SVN: r85843